--- a/css/estilos.css
+++ b/css/estilos.css
@@ -128,6 +128,93 @@ h6{
     border-radius: 5%;
 }
 
+/** Control responsive*/
+@media(max-width:650px){
+
+    .sobreMi{
+        color: black;
+        font-size: 12px;
+        font-family: 'Anton', sans-serif;
+        font-family: 'Fredoka One', cursive;
+        margin-right: 10px;
+    }
+    
+    .redondearImg{
+        display: block;
+        margin: 32px auto;
+        border-radius: 70%;
+        height: 80px;
+        width: 80px;
+    }
+    
+    /** STYLE ICONOS DE INFORMACION PERSONAL*/
+    .infoP{
+        display: block;
+        margin: 12px auto;
+        height: 20px;
+        width: 25px;
+    }
+    
+    #datosPriv{
+        color: black;
+        font-size: 20px;
+        font-family: 'Anton', sans-serif;
+        font-family: 'Fredoka One', cursive;
+    }
+    
+    
+    /** STYLE PIE DE PAGINA*/
+
+    
+    #contacto{
+        margin-top: 3px;
+        margin-left: 5px;
+        margin-right: 5px;
+        height: 20px;
+        width: 20px;
+    }
+    /** STYLE TITULOS SECCIONES*/
+
+    #responsive{
+        font-size: 13px;
+    }
+
+    #responsive2{
+        font-size:10px;
+    }
+    
+    #mostrar,#mostrar2,#mostrar3,#mostrar4,#mostrar5{
+        height: 15px;
+        width: 30px;
+        text-align: left;
+    }
+
+    
+    #duracion{
+        font-size: 7px;
+    }
+    
+    /** STYLE SKILLS*/
+
+    #letras{
+        font-family: 'Anton', sans-serif;
+        font-family: 'Fredoka One', cursive;
+        font-size:10px;
+    }
+    #skills{
+        margin-left: 0px;
+    }
+
+    /** STYLE FORMACIONES*/
+    #perfil,#educacion,#experiencia{
+        margin-left: 10px;
+        text-align: justify;
+        display: none;
+        font-size:10px;
+    }
+
+}
+
 
 
 
